src/test/deca/context/invalid/IntAffectationWithFloat.deca
{
    int x = 2020;
    float y = 2020f;
    x = 20 + y;
    
}